---
source: server/src/webhook/parse.rs
expression: event
snapshot_kind: text
---
WebhookEvent {
    sender: Some(
        User {
            login: "TroyKomodo",
            id: UserId(
                49777269,
            ),
        },
    ),
    repository: Some(
        Repository {
            id: RepositoryId(
                900225914,
            ),
            name: "brawl",
            owner: User {
                login: "ScuffleCloud",
                id: UserId(
                    122814584,
                ),
            },
        },
    ),
    installtion_id: Some(
        InstallationId(
            58286822,
        ),
    ),
    installation: None,
    kind: Push,
    specific: Push(
        PushWebhookEventPayload {
            enterprise: None,
            after: "e48e2992625296b086ffc6430bdefb06894144d9",
            base_ref: None,
            before: "d22a5bdc9af3d51aa6ecc6011b440f0dcda466a3",
            commits: [
                PushWebhookEventCommit {
                    added: [
                        "server/src/github/mock/comment.json",
                        "server/src/github/mock/commit.json",
                        "server/src/github/mock/create_commit.json",
                        "server/src/github/mock/create_merge.json",
                        "server/src/github/mock/create_merge_conflict.json",
                        "server/src/github/mock/delete_branch.json",
                        "server/src/github/mock/delete_branch_non_exist.json",
                        "server/src/github/mock/pr.json",
                        "server/src/github/mock/pr_reviewers.json",
                        "server/src/github/mock/ref_latest_commit.json",
                        "server/src/github/mock/ref_not_found.json",
                        "server/src/github/mock/role_members.json",
                        "server/src/github/mock/team_members.json",
                        "server/src/github/mock/team_not_found.json",
                        "server/src/github/mock/update_ref.json",
                        "server/src/github/mock/user.json",
                        "server/src/github/mock/user_not_found.json",
                        "server/src/utils.rs",
                    ],
                    author: GitUserTime {
                        user: CommitAuthor {
                            name: "Troy Benson",
                            email: "troybensonsa@gmail.com",
                            date: None,
                        },
                        date: None,
                        username: Some(
                            "TroyKomodo",
                        ),
                    },
                    committer: GitUserTime {
                        user: CommitAuthor {
                            name: "Troy Benson",
                            email: "troybensonsa@gmail.com",
                            date: None,
                        },
                        date: None,
                        username: Some(
                            "TroyKomodo",
                        ),
                    },
                    distinct: true,
                    id: "e48e2992625296b086ffc6430bdefb06894144d9",
                    message: "github testing",
                    modified: [
                        "Cargo.lock",
                        "server/Cargo.toml",
                        "server/src/auto_start.rs",
                        "server/src/bin/server.rs",
                        "server/src/command/cancel.rs",
                        "server/src/command/dry_run.rs",
                        "server/src/command/merge.rs",
                        "server/src/command/mod.rs",
                        "server/src/command/ping.rs",
                        "server/src/command/pr.rs",
                        "server/src/command/retry.rs",
                        "server/src/github/config.rs",
                        "server/src/github/installation.rs",
                        "server/src/github/merge_workflow.rs",
                        "server/src/github/messages/mod.rs",
                        "server/src/github/mod.rs",
                        "server/src/github/models.rs",
                        "server/src/github/repo.rs",
                        "server/src/lib.rs",
                        "server/src/webhook/mod.rs",
                    ],
                    removed: [],
                    timestamp: 2024-12-21T23:37:06Z,
                    tree_id: "2736c601a8314842dc50ca679a9ba4b9fa06e374",
                    url: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "github.com",
                            ),
                        ),
                        port: None,
                        path: "/ScuffleCloud/brawl/commit/e48e2992625296b086ffc6430bdefb06894144d9",
                        query: None,
                        fragment: None,
                    },
                },
            ],
            compare: Url {
                scheme: "https",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "github.com",
                    ),
                ),
                port: None,
                path: "/ScuffleCloud/brawl/compare/d22a5bdc9af3...e48e29926252",
                query: None,
                fragment: None,
            },
            created: false,
            deleted: false,
            forced: false,
            head_commit: Some(
                PushWebhookEventCommit {
                    added: [
                        "server/src/github/mock/comment.json",
                        "server/src/github/mock/commit.json",
                        "server/src/github/mock/create_commit.json",
                        "server/src/github/mock/create_merge.json",
                        "server/src/github/mock/create_merge_conflict.json",
                        "server/src/github/mock/delete_branch.json",
                        "server/src/github/mock/delete_branch_non_exist.json",
                        "server/src/github/mock/pr.json",
                        "server/src/github/mock/pr_reviewers.json",
                        "server/src/github/mock/ref_latest_commit.json",
                        "server/src/github/mock/ref_not_found.json",
                        "server/src/github/mock/role_members.json",
                        "server/src/github/mock/team_members.json",
                        "server/src/github/mock/team_not_found.json",
                        "server/src/github/mock/update_ref.json",
                        "server/src/github/mock/user.json",
                        "server/src/github/mock/user_not_found.json",
                        "server/src/utils.rs",
                    ],
                    author: GitUserTime {
                        user: CommitAuthor {
                            name: "Troy Benson",
                            email: "troybensonsa@gmail.com",
                            date: None,
                        },
                        date: None,
                        username: Some(
                            "TroyKomodo",
                        ),
                    },
                    committer: GitUserTime {
                        user: CommitAuthor {
                            name: "Troy Benson",
                            email: "troybensonsa@gmail.com",
                            date: None,
                        },
                        date: None,
                        username: Some(
                            "TroyKomodo",
                        ),
                    },
                    distinct: true,
                    id: "e48e2992625296b086ffc6430bdefb06894144d9",
                    message: "github testing",
                    modified: [
                        "Cargo.lock",
                        "server/Cargo.toml",
                        "server/src/auto_start.rs",
                        "server/src/bin/server.rs",
                        "server/src/command/cancel.rs",
                        "server/src/command/dry_run.rs",
                        "server/src/command/merge.rs",
                        "server/src/command/mod.rs",
                        "server/src/command/ping.rs",
                        "server/src/command/pr.rs",
                        "server/src/command/retry.rs",
                        "server/src/github/config.rs",
                        "server/src/github/installation.rs",
                        "server/src/github/merge_workflow.rs",
                        "server/src/github/messages/mod.rs",
                        "server/src/github/mod.rs",
                        "server/src/github/models.rs",
                        "server/src/github/repo.rs",
                        "server/src/lib.rs",
                        "server/src/webhook/mod.rs",
                    ],
                    removed: [],
                    timestamp: 2024-12-21T23:37:06Z,
                    tree_id: "2736c601a8314842dc50ca679a9ba4b9fa06e374",
                    url: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "github.com",
                            ),
                        ),
                        port: None,
                        path: "/ScuffleCloud/brawl/commit/e48e2992625296b086ffc6430bdefb06894144d9",
                        query: None,
                        fragment: None,
                    },
                },
            ),
            pusher: GitUserTime {
                user: CommitAuthor {
                    name: "TroyKomodo",
                    email: "",
                    date: None,
                },
                date: None,
                username: None,
            },
            ref: "refs/heads/troy/refactor",
        },
    ),
}
